fix(ObjectPage): apply correct height for collapsed header spacing div (#6088)
Fixes #6087

--- a/packages/main/src/components/DynamicPageHeader/DynamicPageHeader.module.css
+++ b/packages/main/src/components/DynamicPageHeader/DynamicPageHeader.module.css
@@ -6,4 +6,5 @@
   padding-block-end: 1rem;
   display: var(--_ui5wcr_DynamicPage_header_display);
   overflow: hidden;
+  width: 100%;
 }
